@@ -1,3 +1,11 @@
+TAG: qcreports_db-5-2-1-24
+DATE: 05/15/2015
+STAFF: lec
+CHANGES:
+1) TR11652/convert from HMD to MRK_Cluster
+mgd/HMD_SymbolDiffs.py
+mgd/MRK_InterimByDate.sql
+
 TAG: qcreports_db-5-2-1-23
 DATE: 05/12/2015
 STAFF: dbm
